--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1387,7 +1387,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_cloner:0 "Cloning Technician"
  job_tec_cloner_plural:0 "Cloning Technicians"
  job_tec_cloner_desc:0 "By a careful managing and a life dedicated to genetic tailoring, these individuals can replicate any genetic template with dedication, creating effective clones of any population."
- job_tec_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_cloner_plural$ convert £consumer_goods£ §Y$consumer_goods$§! and [root.tec_cloner_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!."
+ job_tec_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_cloner_plural$ convert £consumer_goods£ §Y$consumer_goods$§! and [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§!."
  mod_job_tec_cloner_add:0 "$job_tec_cloner$ Jobs"
  mod_job_tec_cloner_per_pop:0 "§G+1§! £mod_job_tec_cloner_add£ $job_tec_cloner$ Job per $VALUE$ Pops"
  mod_job_tec_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1395,7 +1395,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_cloner_drone:0 "Cloner Drone"
  job_tec_cloner_drone_plural:0 "Cloner Drones"
  job_tec_cloner_drone_desc:0 "These drones are dedicated to make and supervise extremely intrincated clone processes, that radically boost the population of the collective."
- job_tec_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_cloner_drone_plural$ convert £unity£ §Y$unity$§! and [root.tec_cloner_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!."
+ job_tec_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_cloner_drone_plural$ convert £unity£ §Y$unity$§! and [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§!."
  mod_job_tec_cloner_drone_add:0 "$job_tec_cloner_drone$ Jobs"
  mod_job_tec_cloner_drone_per_pop:0 "§G+1§! £mod_job_tec_cloner_drone_add£ $job_tec_cloner_drone$ Job per $VALUE$ Pops"
  mod_job_tec_cloner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
@@ -1403,7 +1403,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_master_cloner:0 "Master Cloner"
  job_tec_master_cloner_plural:0 "Master Cloners"
  job_tec_master_cloner_desc:0 "Only a few can reach the degree of perfection in genetic tailoring, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
- job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.tec_cloner_upkeep] into scaling £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, £society£ §YSociety Research§! based on the building upgrade, and £unity£ §YUnity§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.tec_cloner_upkeep] into scaling §Y$tec_loc_biological_assembly$§!, £society£ §YSociety Research§! based on the building upgrade, and £unity£ §YUnity§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_cloner_add:0 "$job_tec_master_cloner$ Jobs"
  mod_job_tec_master_cloner_per_pop:0 "§G+1§! £mod_job_tec_cloner_add£ $job_tec_master_cloner$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1414,7 +1414,7 @@ job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $
  job_tec_master_cloner_drone:0 "Master Cloner Drone"
  job_tec_master_cloner_drone_plural:0 "Master Cloner Drones"
  job_tec_master_cloner_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated cloning processes, radically boosting the collective's population."
- job_tec_master_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_master_cloner_drone_plural$ convert [root.tec_cloner_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_cloner_drone_effect_desc:0 "£job_tec_cloner_drone£ $job_tec_master_cloner_drone_plural$ convert [root.tec_cloner_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_cloner_drone_add:0 "$job_tec_master_cloner_drone$ Jobs"
  mod_job_tec_master_cloner_drone_per_pop:0 "§G+1§! £mod_job_tec_cloner_drone_add£ $job_tec_master_cloner_drone$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
@@ -1423,7 +1423,7 @@ job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $
  job_tec_master_bioengineer:0 "Master Bioengineer"
  job_tec_master_bioengineer_plural:0 "Master Bioengineers"
  job_tec_master_bioengineer_desc:0 "Only a few can reach the degree of perfection in bioengineering, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
- job_tec_master_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ convert [root.tec_bioengineer_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ convert [root.tec_bioengineer_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_bioengineer_add:0 "$job_tec_master_bioengineer$ Jobs"
  mod_job_tec_master_bioengineer_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_add£ $job_tec_master_bioengineer$ Job per $VALUE$ Pops"
  mod_job_tec_master_bioengineer_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioengineer_add£ per $VALUE$ £pop£"
@@ -1434,7 +1434,7 @@ job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioen
  job_tec_master_bioengineer_drone:0 "Master Bioengineer Drone"
  job_tec_master_bioengineer_drone_plural:0 "Master Bioengineer Drones"
  job_tec_master_bioengineer_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated bioengineering processes, radically boosting the collective's bioengineered population."
- job_tec_master_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_master_bioengineer_drone_plural$ convert [root.tec_bioengineer_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_master_bioengineer_drone_plural$ convert [root.tec_bioengineer_upkeep] into §Y$tec_loc_biological_assembly$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_bioengineer_drone_add:0 "$job_tec_master_bioengineer_drone$ Jobs"
  mod_job_tec_master_bioengineer_drone_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_drone_add£ $job_tec_master_bioengineer_drone$ Job per $VALUE$ Pops"
  mod_job_tec_master_bioengineer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
@@ -1443,7 +1443,7 @@ job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioen
  job_tec_master_roboticist:0 "Master Roboticist"
  job_tec_master_roboticist_plural:0 "Master Roboticists"
  job_tec_master_roboticist_desc:0 "Only a few can reach the degree of perfection in artificing and assmebling synthetics or cybernetics that these individuals have achieved, now consecrated to increase the empire workforce, exponentially."
- job_tec_master_roboticist_effect_desc:0 "£job_tec_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into scaling £job_roboticist£ §YRobot Assembly§! and £engineering£ §YEngineering Research§! based on the building upgrade, and £amenities£ §YAmenities§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_roboticist_effect_desc:0 "£job_tec_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into §Y$tec_loc_assembly$§! and £engineering£ §YEngineering Research§! based on the building upgrade, and £amenities£ §YAmenities§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_roboticist_add:0 "$job_tec_master_roboticist$ Jobs"
  mod_job_tec_master_roboticist_per_pop:0 "§G+1§! £mod_job_tec_roboticist_add£ $job_tec_master_roboticist$ Job per $VALUE$ Pops"
  mod_job_tec_master_roboticist_per_pop_short:0 "\n§G+1§! £mod_job_tec_roboticist_add£ per $VALUE$ £pop£"
@@ -1454,7 +1454,7 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  job_tec_master_replicator_drone:0 "Master Replicator Drone"
  job_tec_master_replicator_drone_plural:0 "Master Replicator Drones"
  job_tec_master_replicator_drone_desc:0 "This special kind of drone is able to artifice and create extremely intrincated synthetic machines and cybernetics, radically boosting the collective's synthetic or cybernetic population."
- job_tec_master_replicator_drone_effect_desc:0 "£job_tec_replicator_drone£ $job_tec_master_replicator_drone_plural$ convert [root.tec_replicator_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_replicator_drone_effect_desc:0 "£job_tec_replicator_drone£ $job_tec_master_replicator_drone_plural$ convert [root.tec_replicator_upkeep] into $tec_loc_assembly$ and £engineering£ §YEngineering Research§! based on the building upgrade, and £amenities£ §YAmenities§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_replicator_drone_add:0 "$job_tec_master_replicator_drone$ Jobs"
  mod_job_tec_master_replicator_drone_per_pop:0 "§G+1§! £mod_job_tec_replicator_drone_add£ $job_tec_master_replicator_drone$ Job per $VALUE$ Pops"
  mod_job_tec_master_replicator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
@@ -3470,14 +3470,14 @@ planet_maintenancedrones:0 "Maintenance Drones"
 private_hired: "Private/Hired"
 mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_hired$ Jobs"
 mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
-mod_tec_hired_job_trade_add: "£trade_value£ $TRADE_VALUE$ from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
 
 mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
 
-mod_tec_ruler_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $RULERS$"
-mod_tec_specialist_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $SPECIALISTS$"
-mod_tec_worker_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $WORKERS$"
-mod_tec_pop_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from £pop£ Pops"
+mod_tec_ruler_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $RULERS$"
+mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $SPECIALISTS$"
+mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $WORKERS$"
+mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 
 # Organise
 
