--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -78,7 +78,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # Industrial
  civic_tec_inventinkers:0 "Invent-tinkerers"
  civic_tec_inventinkers_desc:0 "Culturally, this society has evolved with the guide of expert craftsmen, tinkerers and inventors, who used their knowledge to develop new tools and assets to either overcome, support or help others with true marvels of ingenuity and cunning."
- civic_tooltip_tec_inventinkers_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_master_tinker£ §Y$job_tec_master_tinker_plural$§!.\n- $job_tec_master_tinker_effect_desc$\n\n£amenities£ $PLANET_AMENITIES_TITLE$ from £job_foundry£ $job_foundry_plural$: §G+1§!"
+ civic_tooltip_tec_inventinkers_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_master_tinker£ §Y$job_tec_master_tinker_plural$§!.\n- $job_tec_master_tinker_effect_desc$\n\n$tec_loc_amenities$ from £job_foundry£ $job_foundry_plural$: §G+1§!"
 
  # Tech
  civic_tec_science_directorate:0 "Scientific Directorate" 
@@ -333,7 +333,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_executive_committee
  civic_tec_executive_committee: "Executive Committee"
  civic_tec_executive_committee_desc: "This government is dominated by a committee of the Empire's most skillful bureaucrats and administrators."
- civic_tooltip_tec_executive_committee_effects:0 "Active employed §YGovernors§! have no £unity£ §YUnity§! Upkeep and produce §G3§! £unity£ §YUnity§! per level, additionally increased for §YOligarchic§! empires.\n\n£amenities£ $PLANET_AMENITIES_TITLE$ from £job_politician£ Administrators: §G+2§!\n\n"
+ civic_tooltip_tec_executive_committee_effects:0 "Active employed §YGovernors§! have no £unity£ §YUnity§! Upkeep and produce §G3§! £unity£ §YUnity§! per level, additionally increased for §YOligarchic§! empires.\n\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!\n\n"
 
 # /
 
@@ -374,7 +374,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # ------------------------------------------------------------
  civic_tec_capitalized_innovation:0 "Capitalized Innovation"
  civic_tec_capitalized_innovation_desc:0 "The constant competition between laboratories and private research industries is a process that has greatly benefited this empire, as it converted into acquisition of better and most affordable research associates."
- civic_tooltip_capitalized_innovation_effects:0 "£trade_value£ $TRADE_VALUE$ from £job_researcher£ $£job_researcher_plural$: §G+3§!"
+ civic_tooltip_capitalized_innovation_effects:0 "$tec_loc_trade_value$ from £job_researcher£ $£job_researcher_plural$: §G+3§!"
 
 
  # former civic_ultimate_collective
@@ -390,7 +390,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_welfare_state
  civic_tec_social_prosperity:0 "Social Prosperity"
  civic_tec_social_prosperity_desc:0 "In this society the State traditionally plays a key role in the protection and promotion of the economic and social well-being of its citizens."
- civic_tooltip_tec_social_prosperity_effects:0 "Every non-enslaved sentient pop will generate §G0.5§! £unity£ §YUnity§! and §G0.25§! £trade_value£ §YTrade value§! having extra §R0.25§! £consumer_goods£ §YConsumer Goods§! upkeep.\n\nUnemployed pops will have extra £happiness£ §YHappiness§!.\n\nReduced Minimal Wage, Private Healthcare and Private Education policies are disabled.\n\n£amenities£ $PLANET_AMENITIES_TITLE$ from £pop_cat_ruler£ Rulers: §G+2§!"
+ civic_tooltip_tec_social_prosperity_effects:0 "Every non-enslaved sentient pop will generate §G0.5§! £unity£ §YUnity§! and §G0.25§! £trade_value£ §YTrade value§! having extra §R0.25§! £consumer_goods£ §YConsumer Goods§! upkeep.\n\nUnemployed pops will have extra £happiness£ §YHappiness§!.\n\nReduced Minimal Wage, Private Healthcare and Private Education policies are disabled.\n\n$tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!"
 
  # former civic_isolationism
  civic_tec_secured_domain:0 "Secured Domain"
@@ -410,7 +410,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_consumerism
  civic_tec_consumerism:0 "Consumerism"
  civic_tec_consumerism_desc:0 "This society promotes a social and economic ideology that encourages the acquisition of goods and services in ever-increasing amounts."
- civic_tooltip_tec_consumerism_effects:0 "Trade £building£ §YBuildings§! provide a small amount of £trade_value£ §YTrade Value§! per upgrade level.\n\n£trade_value£ $TRADE_VALUE$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+ civic_tooltip_tec_consumerism_effects:0 "Trade £building£ §YBuildings§! provide a small amount of £trade_value£ §YTrade Value§! per upgrade level.\n\n$tec_loc_trade_value$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
 
  # former civic_military_dictatorship
  civic_tec_war_lords:0 "War Lords"
@@ -463,7 +463,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_martial_brotherhood
  civic_tec_martial_brotherhood:0 "Martial Brotherhood"
  civic_tec_martial_brotherhood_desc:0 "Armed Forces are considered to be an integral part of this society, symbol of it's unity and collectivism. To serve is an honor, rather than an a debt, or obligation."
- civic_tooltip_tec_martial_brotherhood_effects:0 "Each upgrade of the £building£ §YCapital§! will provide a £job_soldier£ §Y$job_soldier$§! job.\n§YMilitarist§! faction provides additional influence.\n£amenities£ $PLANET_AMENITIES_TITLE$ from £job_soldier£ $job_soldier_plural$: §G+1§!"
+ civic_tooltip_tec_martial_brotherhood_effects:0 "Each upgrade of the £building£ §YCapital§! will provide a £job_soldier£ §Y$job_soldier$§! job.\n§YMilitarist§! faction provides additional influence.\n$tec_loc_amenities$ from £job_soldier£ $job_soldier_plural$: §G+1§!"
 
  # former civic_exploration
  civic_tec_space_pioneers:0 "Space Pioneers"
@@ -585,7 +585,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_corporate_inventcorp: "Inventive Forgers"
  civic_tec_corporate_inventcorp_desc:0 "The roars of the forges feeds the growth of this empire, with extremelly intelligent and dedicated Executive Tinkers reinventing the ways of creating new and powerful materials they can sell to the best bidder.\n"
- civic_tooltip_tec_corporate_inventcorp_effects:1 "£building£ §YCapital Buildings§! replace some £job_executive£ §Y$job_executive$§! Jobs with £job_tec_corpo_tinker£ §Y$job_tec_corpo_tinker_plural$§!.\n- $job_tec_corpo_tinker_effect_desc$\n\n£trade_value£ $TRADE_VALUE$ from £job_foundry£ $job_foundry_plural$: §G+2§!"
+ civic_tooltip_tec_corporate_inventcorp_effects:1 "£building£ §YCapital Buildings§! replace some £job_executive£ §Y$job_executive$§! Jobs with £job_tec_corpo_tinker£ §Y$job_tec_corpo_tinker_plural$§!.\n- $job_tec_corpo_tinker_effect_desc$\n\n$tec_loc_trade_value$ from £job_foundry£ $job_foundry_plural$: §G+2§!"
 
  civic_tec_corporate_megakillers:0 "Lethal Acquirers"
  civic_tec_corporate_megakillers_desc:0 "There is no place for other kind of megacorps to rival this one because, by literally erradicating others, they will suffer no competence to live."
@@ -686,11 +686,11 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 #others
  civic_tec_corporate_bureaumerce: "Bureau-merce"
  civic_tec_corporate_bureaumerce_desc:0 "Administration without profit is such a horrific idea to this megacorp. Bureaucrats sign, form and optimize every transaction and agreement, generating a wealthy and intricated society."
- civic_tooltip_tec_corporate_bureaumerce_effects:1 "£trade_value£ $TRADE_VALUE$ from £job_manager£ $job_manager_plural$: §G+4§!\n£stability£ $PLANET_STABILITY_TITLE$ from £job_manager£ $job_manager_plural$: §G+1§!\n"
+ civic_tooltip_tec_corporate_bureaumerce_effects:1 "$tec_loc_trade_value$ from £job_manager£ $job_manager_plural$: §G+4§!\n$tec_loc_stability$ from £job_manager£ $job_manager_plural$: §G+1§!\n"
 
  civic_tec_corporate_robocorp: "Assembly Division"
  civic_tec_corporate_robocorp_desc:0 "Who wants to work, when you have those shiny automatons doing it for you?. You want a robot? You get a robot!"
- civic_tooltip_tec_corporate_robocorp_effects:1 "Robot assembly building gives one additional £job_tec_minor_roboticist£ §Y$job_tec_minor_roboticist$§! per £building£ Robot Assembly Building level, each of them producing extra §Y5§! £trade_value£ §YTrade Value§! and §Y0.2§! extra £pop£ §YRobot Pops assembly speed§!.\n£trade_value£ $TRADE_VALUE$ from £job_roboticist£ $job_roboticist_plural$: §G+10§!"
+ civic_tooltip_tec_corporate_robocorp_effects:1 "Robot assembly building gives one additional £job_tec_minor_roboticist£ §Y$job_tec_minor_roboticist$§! per £building£ Robot Assembly Building level, each of them producing extra §Y5§! £trade_value£ §YTrade Value§! and §Y0.2§! extra £pop£ §YRobot Pops assembly speed§!.\n$tec_loc_trade_value$ from £job_roboticist£ $job_roboticist_plural$: §G+10§!"
 
 
  civic_tec_corporate_navaltraders:0 "Interstellar Commercial Assets"
@@ -736,7 +736,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # civic_tec_star_settlers
  civic_tec_corporate_settlers:0 "Stellar Expansionists" 
  civic_tec_corporate_settlers_desc:0 "Big sums of investment and private shareholders are interested in space exploration, and as so the pioneer's spirit is a common ideal for this megacorp population as media is constantly bombarded with the wonders that may, or not, lie ahead."
- civic_tooltip_tec_corporate_settlers_effects:0 "Starts game with §YGalactic Ambitions§! technology already unlocked.\n\nCan't set up neither §YMilitary Transportation§! nor §YMilitary Telecommunications§! policy.\n\n£trade_value£ $TRADE_VALUE$ from £job_colonist£ $job_colonist_plural$: §G+5§!"
+ civic_tooltip_tec_corporate_settlers_effects:0 "Starts game with §YGalactic Ambitions§! technology already unlocked.\n\nCan't set up neither §YMilitary Transportation§! nor §YMilitary Telecommunications§! policy.\n\n$tec_loc_trade_value$ from £job_colonist£ $job_colonist_plural$: §G+5§!"
 
 # civic_tec_computerized_extraction
  civic_tec_corporate_automatation:0 "Promoted Automatation"
@@ -977,7 +977,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_node:0 "Harmonious Resonance"
  civic_tec_hive_node_desc:0 "Each thought and neural processing is shared like an echo within the collective, making each drone resonate with intensity and efficiency to others, making even the lesser drones way more powerful and able than before."
- civic_tooltip_tec_hive_node_effects:0 "£stability£ $PLANET_STABILITY_TITLE$ from £job_synapse_drone£ $job_synapse_drone_plural$: §G+1§!\n"
+ civic_tooltip_tec_hive_node_effects:0 "$tec_loc_stability$ from £job_synapse_drone£ $job_synapse_drone_plural$: §G+1§!\n"
 
  civic_tec_hive_node_cyborg:0 "Embedded Directives"
  civic_tec_hive_node_cyborg_desc:0 "Efficiency is a must for this cybernetic collective, so administrative connections also are derivated to higher drone tiers in order to amplify their capacities."
@@ -985,15 +985,15 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_cybernetwork:0 "Peer-to-Peer Cybernetwork"
  civic_tec_hive_cybernetwork_desc:0 "In this cybernetic collective, neural thoughts and data transfers are done with a great degree of efficiency between network drones, which are able to greatly amplify the processing signals to other drones mitigating the signal stress and making the collective stronger."
- civic_tooltip_tec_hive_cybernetwork_effects:0 "£stability£ $PLANET_STABILITY_TITLE$ from £job_tec_network_drone£ $job_tec_network_drone_plural$: §G+1§!"
+ civic_tooltip_tec_hive_cybernetwork_effects:0 "$tec_loc_stability$ from £job_tec_network_drone£ $job_tec_network_drone_plural$: §G+1§!"
 
  civic_tec_hive_menial:0 "Biospheric Harmony"
  civic_tec_hive_menial_desc:0 "This Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
- civic_tooltip_tec_hive_menial_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n\n£amenities£ $PLANET_AMENITIES_TITLE$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
+ civic_tooltip_tec_hive_menial_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n\n$tec_loc_amenities$ from £job_agri_drone£ $job_agri_drone_plural$: §G+1§!"
 
  civic_tec_hive_menial_lithoid:0 "Lithospheric Harmony"
  civic_tec_hive_menial_lithoid_desc:0 "This Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
- civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n§!£amenities£ $PLANET_AMENITIES_TITLE$ from n£job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
+ civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n§!$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
 
  civic_tec_hive_functional_architecture:0 "Filigree Stricturing"
  civic_tec_hive_functional_architecture_desc:0 "The delicacy and work dedicated by each drone to the structural planning and execution of this gestalt conciousness architecture is monumental, reaching degrees of construction, timings and efficiency generally out of possible predictions."
@@ -1202,7 +1202,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_machine_coordination:0 "Sudo-Coordination"
  civic_tec_machine_coordination_desc:0 "For this sentient Machine Empire there is no room for chaos or disorder; each semiautonomous and menial unit must be strictly and meticulously supervised, and each planet production line must convey enough production to be valuable or otherwise be dismantled and repurposed."
- civic_tooltip_tec_machine_coordination_effects:0 "£stability£ $PLANET_STABILITY_TITLE$ from £job_coordinator£ $job_coordinator_plural$: §G+1§!"
+ civic_tooltip_tec_machine_coordination_effects:0 "$tec_loc_stability$ from £job_coordinator£ $job_coordinator_plural$: §G+1§!"
 
  civic_tec_machine_node:0 "Amplifying Relays"
  civic_tec_machine_node_desc:0 "The degree of signal amplification of this Machine Empire is unparalleled, as each drone serves as a mini amplifier of the central nexus signal, scaling up in the quality of each drone estament, and serving as mutual improvement or general processing co-working."
