--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -46,6 +46,16 @@
  tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ §YIndustrial Resources§!"
  tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
 
+ # Fake resource locs
+ tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
+ tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
+ tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
+ tec_loc_pop_grwoth: "£mod_pop_growth_speed£ Pop Growth Speed"
+
+ tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
+ tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
+ 
+
  tec_loc_industrial_jobs:0 "£job_foundry£ £job_artisan£ Industrial Jobs"
  tec_loc_research_jobs:0 "$mod_base_planet_researchers$"
  tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
