--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1904,3 +1904,6 @@ tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are n
  BIOSERVANT_fossil_plural:0 "Biocreation fossils"
  BIOSERVANT_remnant:0 "RBiocreation remnant"
  BIOSERVANT_remnant_plural:0 "Biocreation remnants"
+
+# Trait tooltips
+trait_tec_natural_sync_tooltip: "$tec_loc_pop_grwoth$ on Perfect Planets: §G+10%§!"
