--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -138,7 +138,7 @@
 
  tr_genetics_efficient_cloning:0 "Stem Cell Stimulation"
  tr_genetics_efficient_cloning_tooltip:0 "£building£ §YCloning Buildings§! replace their passive biological assembly and jobs with a single §YMaster Cloner§! job, which provide dynamic and additional £mod_pop_growth_speed£ §YOrganic Pop Assembly§! and £society£ §YSociety§! Research based on the building tier, and a moderate amount of £unity£ §YUnity§!."
- #"£job_tec_cloner£ Cloner jobs produce 1 extra £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+ #"£job_tec_cloner£ Cloner jobs produce 1 extra §Y$tec_loc_biological_assembly$§!"
 
  tr_genetics_retrovirus:0 "Retroviral Manipulation"
 
