replaced _cyberpsi_ with _cyberpsionic_

--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1075,55 +1075,60 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  trait_tec_biopsionic_germination_desc:0 ""
  trait_tec_biopsionic_germination_effect:0 ""
 
- trait_tec_biopsionic_convergence:0 "Harmonic Convergence"
- trait_tec_biopsionic_convergence_desc:0 ""
- trait_tec_biopsionic_convergence_effect:0 ""
+ trait_tec_biopsionic_shaped_menial:0 "Shaped Capacities"
+ trait_tec_biopsionic_shaped_menial_desc:0 ""
+ trait_tec_biopsionic_shaped_menial_effect:0 ""
+
+ trait_tec_biopsionic_shaped_production:0 "Shaped Dexterity"
+ trait_tec_biopsionic_shaped_production_desc:0 ""
+ trait_tec_biopsionic_shaped_production_effect:0 ""
 
 # --------------- CYBERPSIONIC ASCENSION TRAITS ----------------------
 # T3
  trait_tec_cyberpsionic:0 "Infused Cybernetics"
  trait_tec_cyberpsionic_desc:0 "§LThis species has achieved an exotic combination; Using cybernetics they harness and unlock their psionic potential by completely overcharging both their bodies and their minds.§!"
  TRAIT_TEC_CYBERPSIONIC_EFFECT:0 "£trigger_tec_research£ Research Output: §G+20%§!\nLeader Experience Gain: §G+25%§!\n£energy£ Energy Upkeep: §R+0.4§!"
- trait_tec_cyberpsio_power:0 "Might Implants"
- trait_tec_cyberpsio_power_desc:0 "§LUsing advanced cybernetic implants as a funnel for shroud energy, this psionically gifted species is able to control, manifest and project it for any intensive use, even powering their own self.§!"
- TRAIT_TEC_CYBERPSIO_POWER_EFFECT:0 "Job Upkeep: §G-10%§!\nArmy Damage and Health: §G+25%§!\n\nNaval and Army jobs provide §G2§! extra £unity£ unity.§!"
 
- trait_tec_cyberpsio_equilibrium:0 "Equilibrium Implants"
- trait_tec_cyberpsio_equilibrium_desc:0 "§LVia complicated psiotechnological implants, the highest and more responsible members of this society are able to amplify psionic signals towards the entire population, helping the development and growth of every member interconnected.§!"
- TRAIT_TEC_CYBERPSIO_EQUILIBRIUM_EFFECT:0 "Job Output: §G+5%§!\nRuler jobs provide §G+0.5§! £stability£ stability each.\nGestalt governors provide +5 stability as extra trait."
+ trait_tec_cyberpsionic_power:0 "Might Implants"
+ trait_tec_cyberpsionic_power_desc:0 "§LUsing advanced cybernetic implants as a funnel for shroud energy, this psionically gifted species is able to control, manifest and project it for any intensive use, even powering their own self.§!"
+ trait_tec_cyberpsionic_POWER_EFFECT:0 "Job Upkeep: §G-10%§!\nArmy Damage and Health: §G+25%§!\n\nNaval and Army jobs provide §G2§! extra £unity£ unity.§!"
 
- trait_tec_cyberpsio_control:0 "Control Implants"
- trait_tec_cyberpsio_control_desc:0 "§LHarnessing the power of the shroud, channeled through the mind and technology of this species, ample waves of soothing and subduing waves calm the entire population of this species, making them better, more loyal and obliging towards the empire.§!"
- TRAIT_TEC_CYBERPSIO_CONTROL_EFFECT:0 "£job_enforcer£ Anti-Crime jobs provide §G+1%§! pop output each.\nGoverning ethic attraction §G+25%§!."
+ trait_tec_cyberpsionic_equilibrium:0 "Equilibrium Implants"
+ trait_tec_cyberpsionic_equilibrium_desc:0 "§LVia complicated psiotechnological implants, the highest and more responsible members of this society are able to amplify psionic signals towards the entire population, helping the development and growth of every member interconnected.§!"
+ trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "Job Output: §G+5%§!\nRuler jobs provide §G+0.5§! £stability£ stability each.\nGestalt governors provide +5 stability as extra trait."
 
- trait_tec_cyberpsio_endoskeleton:0 "Warp Endoskeleton"
- trait_tec_cyberpsio_endoskeleton_desc:0 "§LUnder their skin, members of this species have advanced cybernetic endoskeletons composed by specifically designed alloys, infunded with exotic materials created from psionic rituals and energy extraction.§!"
- TRAIT_TEC_CYBERPSIO_ENDOSKELETON_EFFECT:0 "£sr_zro£ Zro Upkeep: §R+0.05§!\n£energy£ Energy Upkeep: §R+0.25§!\n\n§YImproves all types of Cybernetic Implants.§!"
+ trait_tec_cyberpsionic_control:0 "Control Implants"
+ trait_tec_cyberpsionic_control_desc:0 "§LHarnessing the power of the shroud, channeled through the mind and technology of this species, ample waves of soothing and subduing waves calm the entire population of this species, making them better, more loyal and obliging towards the empire.§!"
+ trait_tec_cyberpsionic_CONTROL_EFFECT:0 "£job_enforcer£ Anti-Crime jobs provide §G+1%§! pop output each.\nGoverning ethic attraction §G+25%§!."
 
- trait_tec_cyberpsio_infusion:0 "Dust Inhalers"
- trait_tec_cyberpsio_infusion_desc:0 "§LUsing refined particles of psionic residuum, this species has specifically designed inhalers to ''stimulate'' their population, amplifying their psionic, mental and bodily capacities.§!"
- TRAIT_TEC_CYBERPSIO_INFUSION_EFFECT:0 "Resources from £job£ Jobs: §G+5%§!\nArmy Damage and Health: §G+25%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_endoskeleton:0 "Warp Endoskeleton"
+ trait_tec_cyberpsionic_endoskeleton_desc:0 "§LUnder their skin, members of this species have advanced cybernetic endoskeletons composed by specifically designed alloys, infunded with exotic materials created from psionic rituals and energy extraction.§!"
+ trait_tec_cyberpsionic_ENDOSKELETON_EFFECT:0 "£sr_zro£ Zro Upkeep: §R+0.05§!\n£energy£ Energy Upkeep: §R+0.25§!\n\n§YImproves all types of Cybernetic Implants.§!"
 
- trait_tec_cyberpsio_amplifier:0 "Psiotic Amplifiers"
- trait_tec_cyberpsio_amplifier_desc:0 "§LBy specific discharges of both energetic and infused psionic material directly to the enhanced nervous systems, this species can greatly develop new levels of cognition and awareness never thought before.§!"
- TRAIT_TEC_CYBERPSIO_AMPLIFIER_EFFECT:0 "£trigger_tec_research£ Research Output: §G+10%§!\n£unity£ Unity Output: §G+10%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_infusion:0 "Dust Inhalers"
+ trait_tec_cyberpsionic_infusion_desc:0 "§LUsing refined particles of psionic residuum, this species has specifically designed inhalers to ''stimulate'' their population, amplifying their psionic, mental and bodily capacities.§!"
+ trait_tec_cyberpsionic_INFUSION_EFFECT:0 "Resources from £job£ Jobs: §G+5%§!\nArmy Damage and Health: §G+25%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+
+ trait_tec_cyberpsionic_amplifier:0 "Psiotic Amplifiers"
+ trait_tec_cyberpsionic_amplifier_desc:0 "§LBy specific discharges of both energetic and infused psionic material directly to the enhanced nervous systems, this species can greatly develop new levels of cognition and awareness never thought before.§!"
+ trait_tec_cyberpsionic_AMPLIFIER_EFFECT:0 "£trigger_tec_research£ Research Output: §G+10%§!\n£unity£ Unity Output: §G+10%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
 
  # Specific for robots
- trait_tec_cyberpsio_robot_zro:0 "Entropic Core"
- trait_tec_cyberpsio_robot_zro_desc:0 "§LRevolutionary generators created by crystalised energetic new psionic materials sustain these robotic units, providing them with extensive capacities.§!"
- TRAIT_TEC_CYBERPSIO_ROBOT_ZRO_EFFECT:0 "Instead of §Yconsuming§! it, robotic pops with this trait produce §G+1§! £energy£ Energy.\n\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_robot_zro:0 "Entropic Core"
+ trait_tec_cyberpsionic_robot_zro_desc:0 "§LRevolutionary generators created by crystalised energetic new psionic materials sustain these robotic units, providing them with extensive capacities.§!"
+ trait_tec_cyberpsionic_ROBOT_ZRO_EFFECT:0 "Instead of §Yconsuming§! it, robotic pops with this trait produce §G+1§! £energy£ Energy.\n\n£sr_zro£ Zro Upkeep: §R+0.05§!"
 
- trait_tec_cyberpsio_robot_alloys:0 "Lightbended Frame"
- trait_tec_cyberpsio_robot_alloys_desc:0 "§LEach robotic unit of this species is conformed by exotic alloys using both nominal materials and specifically infused psionic materials. Instead of shining, their surface bends the light around.§!"
- TRAIT_TEC_CYBERPSIO_ROBOT_ALLOYS_EFFECT:0 "Robot Upkeep: §G-25%§!\nRobot Amenities usage: §G-25%§!\n\nRobot £sr_zro£ Zro monthly assembly cost: §R+0.5§!"
+ trait_tec_cyberpsionic_robot_alloys:0 "Lightbended Frame"
+ trait_tec_cyberpsionic_robot_alloys_desc:0 "§LEach robotic unit of this species is conformed by exotic alloys using both nominal materials and specifically infused psionic materials. Instead of shining, their surface bends the light around.§!"
+ trait_tec_cyberpsionic_ROBOT_ALLOYS_EFFECT:0 "Robot Upkeep: §G-25%§!\nRobot Amenities usage: §G-25%§!\n\nRobot £sr_zro£ Zro monthly assembly cost: §R+0.5§!"
 
- trait_tec_cyberpsio_robot_telepsi:0 "Imbound Robokinesis"
- trait_tec_cyberpsio_robot_telepsi_desc:0 "§LConnected to other cybernetic organisms, these mechanical units use psionic waves emanated by them to increase their computing capacities, or be directly commanded by them.§!"
- TRAIT_TEC_CYBERPSIO_ROBOT_TELEPSI_EFFECT:0 "If a £building£ Dimensional Extractor is present on the planet:\nResources from £job£ Jobs: §G+5%§!\nRobot Empire Sprawl contribution: §G-20%§!\n\nRobot £sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_robot_telepsi:0 "Imbound Robokinesis"
+ trait_tec_cyberpsionic_robot_telepsi_desc:0 "§LConnected to other cybernetic organisms, these mechanical units use psionic waves emanated by them to increase their computing capacities, or be directly commanded by them.§!"
+ trait_tec_cyberpsionic_ROBOT_TELEPSI_EFFECT:0 "If a £building£ Dimensional Extractor is present on the planet:\nResources from £job£ Jobs: §G+5%§!\nRobot Empire Sprawl contribution: §G-20%§!\n\nRobot £sr_zro£ Zro Upkeep: §R+0.05§!"
 
- trait_tec_cyberpsio_a:0 "A"
- trait_tec_cyberpsio_a_desc:0 "§LA§!"
- TRAIT_TEC_CYBERPSIO_A_EFFECT:0 "A"
+ trait_tec_cyberpsionic_a:0 "A"
+ trait_tec_cyberpsionic_a_desc:0 "§LA§!"
+ trait_tec_cyberpsionic_A_EFFECT:0 "A"
 
 # --------------- BIOPSI HIVE ASCENSION TRAITS ----------------------
 # T3
@@ -1457,8 +1462,8 @@ TRAIT_SYMBIOTIC_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+20%§!\n$MOD_LEADER_SKILL_LEV
  leader_trait_governor_tec_psionic_teleport:0 "$trait_tec_psionic_teleport$"
  leader_trait_governor_tec_psionic_teleport_desc:0 "§LWith unnatural teleport capacities, this governor is able to control how population is distributed among its control sector.§!"
 
- leader_trait_governor_tec_cyberpsio_equilibrium:0 "$trait_tec_cyberpsio_equilibrium$"
- leader_trait_governor_tec_cyberpsio_equilibrium_desc:0 "§LUsing highly advanced technological amplifiers, this autonomous drone is able to amplify the Hive Mind psionic signal to all the planets under its control, greatly boosting the cohesion of the population.§!"
+ leader_trait_governor_tec_cyberpsionic_equilibrium:0 "$trait_tec_cyberpsionic_equilibrium$"
+ leader_trait_governor_tec_cyberpsionic_equilibrium_desc:0 "§LUsing highly advanced technological amplifiers, this autonomous drone is able to amplify the Hive Mind psionic signal to all the planets under its control, greatly boosting the cohesion of the population.§!"
 
 
 # Elitist building
